--- a/report/report.tex
+++ b/report/report.tex
@@ -572,7 +572,8 @@ Lastly, we can observe that using the deflection result in a more "stable" optim
 seems to be the most effective in general.\\[1em]
 We can report now some plots comparing the results of the executions obtained together with the total time spent in the algorithm execution, with fixed value of $n=50$, number of simplices set $K=40$, first using a positive definite $Q$
 and the a positive semidefinite $Q$.\\
-Following, the table will sum up the results obtained with the function value, the dual gap, number of iterations and total timings.
+Following, the table will sum up the results obtained with the function value, the dual gap, number of iterations and total timings.\\
+Further, we show also a sum up table of the execution with other parameters $n$ and $K$.
 
 \newgeometry{left=0.5cm, right=0.5cm, bottom=0.5cm, top=0.5cm}
 
@@ -699,6 +700,7 @@ Following, the table will sum up the results obtained with the function value, t
     \cline{3-9}
      & & {\itshape true} & $1983$ & $0.827$ & $\lambda$ & $95.91524$ & $1$ & $10.19493$ \\
     \hline
+
     \multirow{6}{*}{P.SD.} & \multirow{2}{*}{$1$} & {\itshape false} & $7024$ & $10.1979$ & $\lambda$ & $151.9145$ & $2$ & $0.77504$ \\
     \cline{3-9}
      & & {\itshape true} & $1624$ & $1.0509$ & $\lambda$ & $155.3109$ & $2$ & $-2.62131$ \\
@@ -713,10 +715,135 @@ Following, the table will sum up the results obtained with the function value, t
     \hline
   \end{tabular}%
   }
+  \caption{Execution with $n=50$ and $K=40$}
+  \label{tab:n-50-K-40}
+\end{table}
+
+\vspace{1em}
+
+\begin{table}[H]
+  \centering
+  \resizebox{\columnwidth}{!}{%
+  \begin{tabular}{| c | c | c | c | c | c | c | c | c |}
+    \hline
+    $\mathbf{K}$ & {\itshape Update rule} & {\itshape defl} & {\itshape total iter} & {\itshape total time (sec)} & {\itshape Optimal} & {\itshape Best } $\phi(\lambda) - f(x^*)$ & {\itshape Best iteration} & {\itshape Best } $\psi(\lambda)$  \\
+    \hline
+    \multirow{6}{*}{$20$} & \multirow{2}{*}{$1$} & {\itshape false} & $17407$ & $207.56$ & $\lambda$ & Not valid & $0$ & Not valid \\
+    \cline{3-9}
+     & & {\itshape true} & $3536$ & $13.319$ & $\lambda$ & $18.93256$ & $2$ & $277.3673$ \\
+    \cline{2-9}
+     & \multirow{2}{*}{$2$} & {\itshape false} & $24302$ & $396.62$ & $\lambda$ & Not valid & $0$ & Not valid \\ 
+    \cline{3-9}
+     & & {\itshape true} & $3131$ & $10.798$ & $\lambda$ & $109.6393$ & $2$ & $186.6606$ \\ 
+    \cline{2-9}   
+     & \multirow{2}{*}{$3$} & {\itshape false} & $31914$ & $893.67$ & $\lambda$ & $171.8724$ & $3$ & $124.4275$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3$ & $0.021$ & $\lambda$ & $144.573$ & $3$ & $151.727$ \\
+    \hline
+
+    \multirow{6}{*}{$33$} & \multirow{2}{*}{$1$} & {\itshape false} & $18860$ & $265.94$ & $\lambda$ & $578.480$ & $2$ & $39.12439$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3060$ & $11.336$ & $\lambda$ & $622.0355$ & $11$ & $-4.4311$ \\
+    \cline{2-9}
+    & \multirow{2}{*}{$2$} & {\itshape false} & $26241$ & $373.783$ & $\lambda$ & $596.7733$ & $4$ & $20.8311$ \\ 
+    \cline{3-9}
+     & & {\itshape true} & $3163$ & $11.733$ & $\lambda$ & Not valid & $0$ & Not valid \\ 
+    \cline{2-9}   
+     & \multirow{2}{*}{$3$} & {\itshape false} & $19547$ & $204.111$ & $\lambda$ & $684.7382$ & $1$ & $-67.1338$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3$ & $0.028$ & $\lambda$ & $674.0635$ & $2$ & $-56.4591$ \\
+    \hline
+
+    \multirow{6}{*}{$50$} & \multirow{2}{*}{$1$} & {\itshape false} & $14139$ & $107.0964$ & $\lambda$ & $4440.370$ & $2$ & $20.7995$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3499$ & $13.169$ & $\lambda$ & $4458.561$ & $1$ & $2.60828$ \\
+    \cline{2-9}
+    & \multirow{2}{*}{$2$} & {\itshape false} & $17739$ & $238.099$ & $\lambda$ & Not valid & $0$ & Not valid \\ 
+    \cline{3-9}
+     & & {\itshape true} & $2$ & $0.01$ & $\lambda$ & $4458.552$ & $1$ & $2.61751$ \\ 
+    \cline{2-9}   
+     & \multirow{2}{*}{$3$} & {\itshape false} & $11662$ & $78.604$ & $\lambda$ & $4558.096$ & $1$ & $-96.9265$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3$ & $0.003$ & $\lambda$ & $4513.209$ & $2$ & $-52.0396$ \\
+    \hline
+
+    \multirow{6}{*}{$66$} & \multirow{2}{*}{$1$} & {\itshape false} & $15227$ & $125.117$ & $\lambda$ & $32272.27$ & $4$ & $20.2569$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3093$ & $11.914$ & $\lambda$ & $32291.0$ & $3$ & $1.53456$ \\
+    \cline{2-9}
+    & \multirow{2}{*}{$2$} & {\itshape false} & $27690$ & $396.278$ & $\lambda$ & $32293.9$ & $27688$ & $-1.36491$ \\ 
+    \cline{3-9}
+     & & {\itshape true} & $11304$ & $76.041$ & $\lambda$ & $32265.3$ & $4$ & $27.2090$ \\ 
+    \cline{2-9}   
+     & \multirow{2}{*}{$3$} & {\itshape false} & $16347$ & $129.622$ & $\lambda$ & $32365.5$ & $1$ & $-72.9762$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3307$ & $12.543$ & $\lambda$ & $32387.6$ & $1$ & $-95.0997$ \\
+    \hline
+
+    \multirow{6}{*}{$80$} & \multirow{2}{*}{$1$} & {\itshape false} & $4290$ & $18.700$ & $\lambda$ & $34.4769$ & $2$ & $56.6695$ \\
+    \cline{3-9}
+     & & {\itshape true} & $2429$ & $8.105$ & $\lambda$ & $34.7176$ & $81$ & $56.4288$ \\
+    \cline{2-9}
+    & \multirow{2}{*}{$2$} & {\itshape false} & $2$ & $0.012$ & $\lambda$ & $35.9508$ & $1$ & $55.1956$ \\ 
+    \cline{3-9}
+     & & {\itshape true} & $3163$ & $11.425$ & $\lambda$ & $35.9708$ & $3163$ & $55.1756$ \\ 
+    \cline{2-9}   
+     & \multirow{2}{*}{$3$} & {\itshape false} & $4984$ & $19.567$ & $\lambda$ & $195.0429$ & $1$ & $-103.896$ \\
+    \cline{3-9}
+     & & {\itshape true} & $3$ & $0.007$ & $\lambda$ & $194.9917$ & $1$ & $-103.845$ \\
+    \hline
+  \end{tabular}%
+  }
+  \caption{Execution with $n=100$ and positive definite $Q$}
+  \label{tab:n-100}
+\end{table}
+
+\begin{table}[H]
+  \centering
+  \resizebox{\columnwidth}{!}{%
+  \begin{tabular}{| c | c | c | c | c | c | c | c |}
+    \hline
+    {\itshape Update rule} & {\itshape defl} & {\itshape total iter} & {\itshape total time (sec)} & {\itshape Optimal} & {\itshape Best } $\phi(\lambda) - f(x^*)$ & {\itshape Best iteration} & {\itshape Best } $\psi(\lambda)$  \\
+    \hline
+    \multirow{2}{*}{$1$} & {\itshape false} & $14077$ & $22.044$ & $\lambda$ & Not valid & $0$ & Not valid \\
+    \cline{2-8}
+     & {\itshape true} & $2136$ & $.596$ & $\lambda$ & $49.0422$ & $10$ & $20.4259$ \\
+    \hline
+    \multirow{2}{*}{$2$} & {\itshape false} & $14710$ & $21.287$ & $\lambda$ & $45.1122$ & $3$ & $24.3559$ \\ 
+    \cline{2-8}
+     & {\itshape true} & $5981$ & $4.258$ & $\lambda$ & $53.5208$ & $67$ & $15.9472$ \\ 
+    \hline   
+    \multirow{2}{*}{$3$} & {\itshape false} & $24833$ & $55.003$ & $\lambda$ & $82.5786$ & $1$ & $-13.1105$ \\
+    \cline{2-8}
+     & {\itshape true} & $2177$ & $0.470$ & $\lambda$ & $75.4582$ & $1$ & $-5.99017$ \\
+    \hline
+  \end{tabular}%
+  }
+  \caption{Execution with $n=25$, $K=13$ and positive semidefinite $Q$}
+  \label{tab:n-25}
 \end{table}
 
 
 \restoregeometry
+
+We can notice from the above plots that the guarantee of having an ascent direction is not ensured. Indeed in some cases we notice how the lagrangian trend tends to decrease instead of increasing, and as a consequence the dual gap behavior tends
+to increase, which is not what we want. That's why we always keep track of the best dual function value. Also, we see how in other cases, in particular when using deflection, the value tends to stabilize, reaching a local maxima. Regarding the 
+$\lambda$/x norm, we see how the decreasing fashion towards the imposed threshold of $10^{-6}$ is not quite smooth in most cases.\\
+In the vastly number of tries, the $\lambda$-norm is the stopping condition which terminates the execution. The threshold set on the dual gap works better on low magnitude experiments (with small $n$), while the threshold of \textit{max\_iter} is 
+never reached.
+
+\section{Code description}
+
+The code is provided in Julia through package. To try it, simply open the Julia REPL inside the current folder (specifying the \texttt{--project=.} directive) and then \texttt{instatiate}. Then you need only to \texttt{include{src/main.jl}} and 
+try values of $n$ and $K$ for yourself.\\
+All the code is inside the \texttt{src} folder:
+\begin{itemize}
+  \item \textit{Utils.jl}: module containing some useful functions;
+  \item \textit{JuMPSolution.jl}: module computing the off-the-shelf primal solution;
+  \item \textit{ADAGRAD\_Solver.jl}: module implementing the different update rules;
+  \item \textit{main.jl}: used to test all the code;
+\end{itemize}
+In addition, \textit{util.sh} is a clean-up routine for the \textit{logs} and \textit{plots} produced, and \textit{analyzer.py} is used to inspect the collected \textit{.csv} files and get some stats.
 
 \newpage
 
@@ -852,7 +979,7 @@ And finally putting this into the main problem, we get:
 
 \section{Appendix B: subgradient computation}
 
-Utterly following the definition, we state that $s$ is a subgradient of $\psi$ at $\lambda_{t-1}$
+Utterly following the definition, we state that $s$ is a subgradient of $\psi$ at $x$
 \[
   \psi( \lambda ) \le \psi(x) + s^T (\lambda - x) \quad \forall \lambda \in \mathbb{R}^n  
 \]
